# recsys

./: .gitignore  PRD.md  README.md  location_analysis.js  migrate_csv_to_mongodb.py
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/models/: try.ipynb
backend/utils/: MatrixFactor.py  TimeSVDpp.py  hybrid_recommender copy.py  hybrid_recommender.py
backend/utils/HybridRecommender/: __init__.py  base.py  collaborative.py  context.py  core.py  demographic.py  interface.py  recency.py
data/: context.csv  eda.ipynb  products.csv  schemas.json  users.csv
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Cart.tsx  Login.tsx  Navbar.tsx  ProductDetail.tsx  ProtectedRoute.tsx  Recommendations.tsx  SearchBar.tsx  Signup.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Cart.tsx  Home.tsx  Login.tsx  PreviousOrders.tsx  ProductDetail.tsx  Profile.tsx  Recommendations.tsx  Signup.tsx
