[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-pymongo==2.3.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pymongo==4.5.0",
    "python-dotenv==1.0.0",
    "scikit-learn==1.3.0",
    "scipy>=1.15.2",
]
